# Gerenciador_de_senhas

./: .gitignore  CMakeLists.txt  GerenciadorDB.db  README.md  conexaobd.cpp  conexaobd.h  conta.cpp  conta.h  contawidget.cpp  contawidget.h  criarusuario.cpp  criarusuario.h  criarusuario.ui  fazerlogin.cpp  fazerlogin.h  fazerlogin.ui  main.cpp  menu.cpp  menu.h  menu.ui  moc_contawidget.cpp
